<!--
  ~
  ~  Created by Dmitry Garmyshev on 10/28/19 6:15 PM
  ~  Copyright (c) 2019 . All rights reserved.
  ~  Last modified 9/5/19 12:05 PM
  ~
  -->

<resources>
    <string name="app_name">Emergency Assistant</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!--
    a - alpha
    b - beta
    p - pilot
    -->
    <string name="app_version">2.0 pilot</string>
    <string name="author">Гармышев Дмитрий Евгеньевич</string>
    <string name="activity_add_volunteer_up_text">Вы можете выбрать уже доступных соц. работников из списка ниже!
        Если же не найдётся нужный, вы сможете добавить своего под списком.</string>
    <string name="activity_add_volunteer_down_text">Нажмите кнопку "готово" после того как введёте ID нужного соц. работника!</string>
    <string name="mark_social_worker_id">ID соц. работника:</string>
    <string name="mark_user_id">ID пользователя:</string>
    <string name="loading">Пожалуйста, подождите...</string>
    <string name="loading1">Загрузка...</string>
    <string name="about_customer_settings">В данном разделе вы сможете настроить параметры вашей учётной записи</string>
    <string name="btn_ready">Готово</string>

    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="middlename">Отчество</string>

    <string name="name_points">Имя:</string>
    <string name="surname_points">Фамилия:</string>
    <string name="middlename_points">Отчество:</string>

    <string name="id">ID</string>
    <string name="call">Звонок</string>
    <string name="house">Дом</string>
    <string name="shop">Магазин</string>
    <string name="settings">Настройки</string>
    <string name="done">Готово</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="about_app">О приложении</string>
    <string name="track">Отслеживается</string>
    <string name="no_track">Не отслеживается</string>
    <string name="state_tracking">Отслеживание состояния</string>
    <string name="social_service">Соц. обслуживание</string>
    <string name="phone_numbers">Номера</string>
    <string name="tasks">Задачи</string>
    <string name="tasks_points">Задачи: </string>
    <string name="user_not_selected">Пользователь не выбран!</string>
    <string name="no_tasks">Нет заданий.</string>
    <string name="str_author">Автор</string>
    <string name="str_app_version">Версия приложения</string>
    <string name="back">Назад</string>
    <string name="cancel">Отмена</string>
    <string name="close">Закрыть</string>
    <string name="phone_number">Номер телефона</string>
    <string name="phone_number_points">Номер телефона:</string>
    <string name="photo">Фото</string>
    <string name="photo_points">Фото:</string>
    <string name="add">Добавить</string>
    <string name="user_on_social_service">Пользователь находится на соц. обслуживании!</string>
    <string name="organization">Организация</string>
    <string name="organization_points">Организация:</string>
    <string name="new_signal">Новый сигнал!</string>
    <string name="select">Выбрать</string>
    <string name="delete">Удалить</string>
    <string name="short_info">Краткая информация:</string>
    <string name="info">Информация</string>
    <string name="problem">Описание проблемы:</string>
    <string name="social_service_request">Заявка на соц. обслуживание</string>
    <string name="enter">Войти</string>
    <string name="login">Логин</string>
    <string name="login_points">Логин:</string>
    <string name="password">Пароль</string>
    <string name="password_points">Пароль:</string>
    <string name="authorization">Авторизация</string>
    <string name="help">Помощь</string>
    <string name="no_selected_user">Пользователь не выбран!</string>
    <string name="password_wrong">Wrong password!</string>

    <string name="tasks_filter_all">Все</string>
    <string name="tasks_filter_new">Новые</string>
    <string name="tasks_filter_processing">Выполняются</string>
    <string name="tasks_filter_pending">В ожидании</string>
    <string name="tasks_filter_solved">Решено</string>
    <string name="tasks_filter_closed">Закрытые</string>


</resources>
