<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~  Created by Dmitry Garmyshev on 10/28/19 6:15 PM
  ~  Copyright (c) 2019 . All rights reserved.
  ~  Last modified 9/1/19 7:55 PM
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/social_service_request"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="vertical"
                android:background="@color/colorBorder"
                android:layout_margin="5dp">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnCRL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/textView44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/loading"
                    android:textColor="@color/colorText"
                    android:textSize="24sp" />

                <ProgressBar
                    android:id="@+id/progressBar4"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/name_points"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    android:textSize="18dp" />

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/colorText"
                    android:textSize="24sp" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/phone_number_points"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    android:textSize="18dp" />

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/colorText"
                    android:textSize="24sp" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/organization_points"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    android:textSize="18dp" />

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="10dp"

                    android:textColor="@color/colorText"
                    android:textSize="24sp" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/problem"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    android:textSize="18dp" />

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/colorText"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn_CreateRequest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/lout_btn_blue"
                    android:padding="10dp"
                    android:text="@string/done"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_BackRequest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/lout_btn_blue"
                    android:padding="10dp"
                    android:text="@string/back"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>