<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~  Created by Dmitry Garmyshev on 10/28/19 6:15 PM
  ~  Copyright (c) 2019 . All rights reserved.
  ~  Last modified 9/1/19 7:32 PM
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Тут спрятан прогресс бар загрузки -->
    <LinearLayout
        android:id="@+id/ln_NUL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:visibility="gone">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/loading"
            android:textColor="@color/colorText"
            android:textSize="24sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mark_user_id"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/et_IDRelatDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textSize="24sp"

        android:padding="10dp"
        android:layout_margin="5dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_CancelAddRelat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/lout_btn_red"
            android:text="@string/cancel"
            android:textColor="@color/colorTextWhite"
            android:textSize="12sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_FinalAddRelat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/lout_btn_blue"
            android:text="@string/done"
            android:textColor="@color/colorTextWhite"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>