<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~  Created by Dmitry Garmyshev on 10/28/19 6:15 PM
  ~  Copyright (c) 2019 . All rights reserved.
  ~  Last modified 9/1/19 7:55 PM
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Login_Organizations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="5dp"
                android:background="@drawable/lout_btn_green"
                android:padding="5dp"
                android:text="@string/organization"
                android:textColor="@color/colorTextWhite"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"></LinearLayout>

            <Button
                android:id="@+id/btn_ready_users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="5dp"
                android:background="@drawable/lout_bg"
                android:padding="5dp"
                android:text="Готовые пользователи"
                android:textSize="12sp"
                android:visibility="gone"
                tools:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_CreateRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/lout_btn_green"
            android:text="@string/social_service_request"
            android:textColor="@color/colorTextWhite"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_CreateNewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/lout_btn_red"
            android:gravity="center"
            android:text="Создать профиль"
            android:textColor="@color/colorTextWhite"
            android:textSize="12sp"
            android:visibility="gone"
            tools:visibility="gone" />

        <Button
            android:id="@+id/btn_Autorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/lout_btn_blue"
            android:text="@string/authorization"
            android:textColor="@color/colorTextWhite"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom|end"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_login_fsel_aboutapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/lout_btn_blue"
                android:padding="5dp"
                android:text="@string/about_app"
                android:textColor="@color/colorTextWhite"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <Button
                    android:id="@+id/btn_Login_FirstSelect_Help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/lout_btn_blue"
                    android:text="@string/help"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="12sp" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>